Bug 1272565 - draw a blank image when no frames in the video track.

MozReview-Commit-ID: 1Kijn00XAnQ